tests/integrations/basic/tests/actual_tests/error_below_multi_rev.edition2015.stderr
error: unused import: `::std::vec`
 --> tests/actual_tests/error_below_multi_rev.rs:9:5
  |
9 | use ::std::vec;
  |     ^^^^^^^^^^
  |
note: the lint level is defined here
 --> tests/actual_tests/error_below_multi_rev.rs:6:20
  |
6 | #![deny(dead_code, unused_imports)]
  |                    ^^^^^^^^^^^^^^

error: unused import: `::m::foo`
  --> tests/actual_tests/error_below_multi_rev.rs:18:5
   |
18 | use ::m::foo;
   |     ^^^^^^^^

error: function `foo` is never used
  --> tests/actual_tests/error_below_multi_rev.rs:13:10
   |
13 |   pub fn foo() {}
   |          ^^^
   |
note: the lint level is defined here
  --> tests/actual_tests/error_below_multi_rev.rs:6:9
   |
6  | #![deny(dead_code, unused_imports)]
   |         ^^^^^^^^^

error: aborting due to 3 previous errors

